# pingo-light

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  agent.py  bingo-light  bingo_core.py  bingo_light_cli.py  fuzz_mcp.py  install.sh  llms.txt  mcp-server.py  package.json  pingo-light  pyproject.toml  tui.py
.claude/commands/: bingo.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  fix-npm-dist-tag.yml  release.yml
bingo_core/: __init__.py  config.py  decisions.py  dep.py  dep_fork.py  dep_npm.py  dep_pip.py  exceptions.py  git.py  models.py  repo.py  semantic.py  setup.py  state.py  team.py
completions/: bingo-light.bash  bingo-light.fish  bingo-light.zsh
contrib/: agent.py
contrib/homebrew/: bingo-light.rb  pingo-light.rb
contrib/hooks/: discord-notify  generic-webhook  slack-notify
docs/: TRANSLATING.md  ai-setup.md  concepts.md  getting-started.md  llms.txt
docs/superpowers/plans/: 2026-04-11-readme-packaging-redesign.md  2026-04-12-comprehensive-improvements.md  2026-04-12-python-core-rewrite.md
docs/superpowers/specs/: 2026-04-11-readme-packaging-redesign.md
tests/: fuzz_mcp.py  run-all.sh  test-mcp.py  test.sh  test_core.py  test_dep.py
