[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "bingo-light"
version = "2.0.0"
description = "Fork maintenance for AI agents. Patch stack on top of upstream, one command to sync."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "DanOps-1" },
]
keywords = [
    "git",
    "fork",
    "patch",
    "rebase",
    "sync",
    "mcp",
    "ai-agent",
    "devtools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/DanOps-1/bingo-light"
Repository = "https://github.com/DanOps-1/bingo-light"
Issues = "https://github.com/DanOps-1/bingo-light/issues"
Changelog = "https://github.com/DanOps-1/bingo-light/blob/main/CHANGELOG.md"

[project.scripts]
bingo-light = "bingo_light_cli:main"

[tool.setuptools]
py-modules = ["bingo_core", "bingo_light_cli"]

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]
